# etu-coding

./: LICENSE  README.md
Lab1/: Lab1.cpp  Lab1.sln  Lab1.vcxproj
Lab2/: Lab2.cpp  Lab2.sln  Lab2.vcxproj
Lab3/: Lab3.cpp  Lab3.sln  Lab3.vcxproj
S3. Algorithms and Data Structures (Python)/: Coursework-KruskalAlgorithm.py  Lab1-DataStructures.py  Lab2-Timsort.py  Lab3-AVLTree.py
S3. Computer Systems Organization (C, C++)/: Lab1-DataTypes.cpp  Lab2-Videosystem.c  Lab3-Graphics.c  Lab4a-SoftwareInterrupts.c  Lab4b-SoftwareInterrupts.c  Lab5-HardwareInterrupts.c
S4. Operating Systems (C++)/: Lab1-POSIXThreads.cpp  Lab2a-Mutex.cpp  Lab2b-Mutex.cpp  Lab2c-Mutex.cpp  Lab3a-Channels.cpp  Lab3b-Channels.cpp  Lab3c-Channels.cpp  Lab4a-Processes.cpp  Lab4b-Processes.cpp
S5. Data Management (SQL)/: Coursework-CarServiceDatabase.sql
S5. Intelligent Data Analysis (R)/: Lab1.r  Lab2.r  Lab3.r
S5. Machine Learning (Python, Jupyter)/: Lab1.ipynb  Lab2.ipynb  Lab3.ipynb  Lab4.ipynb
S6. Information Systems Design Methods and Tools (Java, SQL)/: settings.gradle
S6. Object-oriented Programming (C++, Qt)/Lab1-MatrixCalculator/: CMakeLists.txt  application.cpp  main.cpp  matrix.cpp  matrix.h
S6. Techniques and Tools for Information System Design (Java)/: script.sql
S7. Computer Graphics (Java)/: README.md  settings.gradle.kts
S7. Information Systems Design Methods and Tools (Java, SQL)/: script.sql
S7. Techniques and Tools for Information System Design (Java, SQL)/: README.md  build.gradle
S8. Real-Time Systems (C)/: T1_Medvedev_0374.c  T2_Medvedev_0374.c
(+130 files in other folders)
